[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/low_score_panel.gd" type="Script" id=1]
[ext_resource path="res://Sprites/close.png" type="Texture" id=2]
[ext_resource path="res://Sprites/star.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Resources/panel_border.tres" type="StyleBox" id=6]
[ext_resource path="res://Resources/panel_style.tres" type="StyleBox" id=7]
[ext_resource path="res://Resources/config_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://Sprites/mock score.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -600, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[node name="LowScorePanel" type="CanvasLayer"]
offset = Vector2( 0, -600 )
transform = Transform2D( 1, 0, 0, 1, 0, -600 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 0.5
margin_top = 1.05945
margin_right = 1024.5
margin_bottom = 577.059
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 258.0
margin_top = 179.0
margin_right = 766.0
margin_bottom = 709.0
rect_min_size = Vector2( 500, 0 )
custom_styles/panel = ExtResource( 6 )

[node name="ColorPanel" type="Panel" parent="CenterContainer/PanelContainer"]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 504.0
margin_bottom = 526.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 504.0
margin_bottom = 526.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 502.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_right = 460.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowScoreTitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 298.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "low_score_title"

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 406.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="CloseButton" type="TextureButton" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 460.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerLevel" type="Container" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 62.0
margin_right = 460.0
margin_bottom = 482.0
rect_min_size = Vector2( 460, 420 )

[node name="Sprite" type="Sprite" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ContainerLevel"]
texture = ExtResource( 9 )
centered = false

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ContainerLevel"]
margin_top = 360.0
margin_right = 460.0
margin_bottom = 418.0
rect_min_size = Vector2( 300, 50 )
custom_styles/panel = ExtResource( 6 )

[node name="ColorPanel" type="Panel" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ContainerLevel/PanelContainer"]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 456.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 50 )
custom_styles/panel = ExtResource( 7 )

[node name="OfflineButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ContainerLevel/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 456.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 8 )
text = "list_scores"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ContainerLevel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "online_not_available"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
visible = false
margin_top = 422.0
margin_right = 460.0
margin_bottom = 772.0
rect_min_size = Vector2( 460, 350 )
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer"]
margin_right = 460.0
rect_min_size = Vector2( 460, 0 )
custom_constants/separation = 10

[node name="Level" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 460.0
margin_bottom = 29.0
custom_constants/separation = 15

[node name="Text" type="Label" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/Level"]
margin_right = 76.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "level_#"

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/Level"]
margin_left = 91.0
margin_right = 112.0
margin_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="LevelScore" type="Label" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/Level"]
margin_left = 127.0
margin_right = 142.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/Level"]
margin_left = 157.0
margin_right = 420.0
margin_bottom = 25.0
rect_min_size = Vector2( 263, 25 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalMet" type="TextureRect" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer/Level"]
margin_left = 435.0
margin_right = 460.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 3 )
expand = true

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
visible = false
margin_top = 422.0
margin_right = 460.0
margin_bottom = 480.0
rect_min_size = Vector2( 300, 50 )
custom_styles/panel = ExtResource( 6 )

[node name="ColorPanel" type="Panel" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/PanelContainer"]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 456.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 50 )
custom_styles/panel = ExtResource( 7 )

[node name="OnlineButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 456.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 8 )
text = "online_scores"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in_options = SubResource( 6 )
[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/ContainerLevel/PanelContainer/OfflineButton" to="." method="_on_OfflineButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/PanelContainer/OnlineButton" to="." method="_on_OnlineButton_pressed"]
